--- a/cafeproject/postapp/templates/result.html
+++ b/cafeproject/postapp/templates/result.html
@@ -15,6 +15,7 @@
         <h4> 👑 BEST 👑 </h4>
     </div>
     <form action="{% url 'result' %}" method="GET">
+        <div class = "alert alert-danger" role = "alert">
         <fieldset>
             <legend>name</legend>
             <input type="text" name='title' placeholder="카페 이름을 입력하세요" required>
@@ -30,6 +31,7 @@
         <br />
         <input type="submit" value="search">
     </form>
+    </div>
     <br>
     <a class="alert alert-danger" href="{% url 'write' %}" role="button"> POST </a>
     <div>
