design update commit

--- a/cafeproject/postapp/templates/result.html
+++ b/cafeproject/postapp/templates/result.html
@@ -18,15 +18,15 @@
         <div class = "alert alert-danger" role = "alert">
         <fieldset>
             <legend>name</legend>
-            <input type="text" name='title' placeholder="카페 이름을 입력하세요" required>
+            <input type="text" name='title' placeholder="카페 이름을 입력하세요" class = "form-control" required>
         </fieldset>
         <fieldset>
             <legend>location</legend>
-            <input type="text" name='location' placeholder="카페 위치를 입력하세요" required>
+            <input type="text" name='location' placeholder="카페 위치를 입력하세요" class = "form-control" required>
         </fieldset>
         <fieldset>
             <legend>feature</legend>
-            <input type="text" name='feature' placeholder="카페 태그를 입력하세요" required>
+            <input type="text" name='feature' placeholder="카페 태그를 입력하세요" class = "form-control" required>
         </fieldset>
         <br />
         <input type="submit" value="search">
