design update commit

--- a/cafeproject/postapp/templates/result.html
+++ b/cafeproject/postapp/templates/result.html
@@ -29,7 +29,7 @@
             <input type="text" name='feature' placeholder="카페 태그를 입력하세요" class = "form-control" required>
         </fieldset>
         <br />
-        <input type="submit" value="search">
+        <input type="submit" value="search" class = "btn btn-dark">
     </form>
     </div>
     <br>
