--- a/cafeproject/accounts2/templates/login.html
+++ b/cafeproject/accounts2/templates/login.html
@@ -16,7 +16,7 @@
 <br>
 {% endif %}
 
-
+<center>
 <div class="container">
     <h1>Login</h1>
 
@@ -32,7 +32,8 @@
         <input name="password" type="password" value="">
         <br>
         <br>
-        <input class="btn btn-primary" type="submit" value="Login">
+        <input class="btn btn-light" type="submit" value="Login">
     </form>
 </div>
+</center>
 {% endblock %}
