--- a/cafeproject/accounts2/templates/signup.html
+++ b/cafeproject/accounts2/templates/signup.html
@@ -11,9 +11,9 @@
 {% block contents %}
 
 
-
+<center>
 <div class="container">
-    <h1>Sign Up!</h1>
+    <h1>SIGN UP</h1>
 
     <form method="POST" action="{% url 'signup'%}">
 
@@ -31,8 +31,8 @@
         <input name="password2" type="password" value="">
         <br>
         <br>
-        <input class="btn btn-primary" type="submit" value="Sign Up!">
+        <input class="btn btn-light" type="submit" value="Sign Up!">
     </form>
 </div>
-
+</center>
 {% endblock %}
