--- a/cafeproject/mainpage/templates/main.html
+++ b/cafeproject/mainpage/templates/main.html
@@ -16,7 +16,7 @@
   <div class="card-deck mb-3 text-center">
     <div class="card mb-4 shadow-sm">
       <div class="card-header">
-        <h4 class="my-0 font-weight-normal">NAME</h4>
+        <h6 class="my-0 font-weight-normal">강원 툇마루</h6>
       </div>
       <div class="card-body">
       <img src="{% static '1.jpeg'%}" height="310px" width="310px">
@@ -24,7 +24,7 @@
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-header">
-        <h4 class="my-0 font-weight-normal">NAME</h4>
+        <h6 class="my-0 font-weight-normal">부산 비포 선셋</h6>
       </div>
       <div class="card-body">
         <img src="{% static '2.jpeg'%}" height="310px" width="310px">
@@ -32,7 +32,7 @@
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-header">
-        <h4 class="my-0 font-weight-normal">NAME</h4>
+        <h6 class="my-0 font-weight-normal">광주 밀당</h6>
       </div>
       <div class="card-body">
        <img src="{% static '3.png'%}" height="310px" width="310px">
