--- a/cafeproject/postapp/templates/result.html
+++ b/cafeproject/postapp/templates/result.html
@@ -18,7 +18,7 @@
         <div class = "alert alert-danger" role = "alert">
         <fieldset>
             <legend>name</legend>
-            <input type="text" name='title' placeholder="카페 이름을 입력하세요" class = "form-control" required>
+            <input type="text" name='title' placeholder="카페 이름을 입력하세요" class = "form-control" aria-haspopup="true" required>
         </fieldset>
         <fieldset>
             <legend>location</legend>
