--- a/cafeproject/postapp/templates/post.html
+++ b/cafeproject/postapp/templates/post.html
@@ -43,7 +43,7 @@
             <div class="col-md-4">
                 <div class="card mb-4 shadow-sm">
                     <!--<img class="card-img-top" src="{{ post.image.url }}" alt=" Card image cap">-->
-                    <img src="{{ post.image.url }}" alt="..." class="img-thumbnail">
+                    <img src="{{ post.image.url }}"  height="310px" width="345px">
                     <div class="card-body">
                         <h5>{{ post.title }}</h5>
                         <p class="card-text">{{ post.summary }}</p>
