--- a/cafeproject/startpage/templates/start.html
+++ b/cafeproject/startpage/templates/start.html
@@ -14,7 +14,7 @@
     <body style="margin:0px;">
     <i>검색어를 입력하세요<i>
     <!--검색어 창-->
-    <form action = "{% url 'main' %}">
+    <form action = "{% url 'postmain' %}">
     <div class="content">
     <div class="search">
       <input type="text" class="search1" placeholder="카페를 찾으시나요?">
