--- a/cafeproject/mainpage/templates/base.html
+++ b/cafeproject/mainpage/templates/base.html
@@ -83,7 +83,7 @@
     <div class = "header">
        
         <div class = "logo">
-           <h1>cafe project</h1>
+           <h1>Cafe Project</h1>
             
 
         </div>
@@ -91,4 +91,10 @@
         {% block contents %}
         {% endblock %}
     </body>
+    <style>
+        .logo{
+            color:darkred;
+            font-display: bold;
+        }
+    </style>
 </html>
