--- a/cafeproject/mainpage/templates/main.html
+++ b/cafeproject/mainpage/templates/main.html
@@ -135,8 +135,11 @@
 
 <!--지울수 있으면 지우고 아니면 그냥 두고 -->
    <div class ="footer">
-    <p>멋쟁이 사자처럼 메인 샘플 </p>
-    <h4>SAMPLE sample sample SAMPLE</h4>
+    <p>@copyright mju.likelion </p>
+    <h6>contact us </h6>
+    <h7>Email: mju@likelion.org   </h7>
+    <h7>   Tel: 031-000-0000</h7>
+    
       
 
     </div>
