--- a/cafeproject/postapp/templates/write.html
+++ b/cafeproject/postapp/templates/write.html
@@ -24,7 +24,7 @@
 {% block contents %}
 <br>
 <div class="container">
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-light" role="alert">
         <h4>POST CAFE ☕️</h4>
     </div>
     <div class="container">
@@ -32,24 +32,24 @@
             {% csrf_token %}
             <br>
             <h5>CAFE NAME</h5>
-            <input class="alert alert-danger" type="text" name="title">
+            <input class="alert alert-light" type="text" name="title">
             <br>
             <br>
             <h5>CAFE IMAGE</h5>
-            <input class="alert alert-danger" type="file" name="image">
+            <input class="alert alert-light" type="file" name="image">
             <br>
             <br>
             <h5>ABOUT CAFE</h5>
-            <textarea class="alert alert-danger" cols=40 rows=10 name="body"></textarea>
+            <textarea class="alert alert-light" cols=40 rows=10 name="body"></textarea>
             <br>
             <br>
             <h5>AREA</h5>
-            <input class="alert alert-danger" type="text" name="area">
+            <input class="alert alert-light" type="text" name="area">
             <br>
             <br>
            <!--<input class="btn btn-dark" type="submit" value="제출하기">-->
             
-            <input class="alert alert-danger" type="submit" value="SUBMIT">
+            <input class="alert alert-light" type="submit" value="SUBMIT">
         </form>
     </div>
 </div>
