--- a/cafeproject/mainpage/static/css/main.css
+++ b/cafeproject/mainpage/static/css/main.css
@@ -1,7 +1,12 @@
 .head {
-  top: 60px;
+  position: fixed;
+  top: 0;
+  width: 100%;
   height: 60px;
   background: #ffffff;
+  border-bottom-color: #003366;
+  border-width: 2px;
+  z-index: 3;
 }
 .logo {
   height: 100%;
