--- a/cafeproject/mainpage/templates/base.html
+++ b/cafeproject/mainpage/templates/base.html
@@ -5,7 +5,7 @@
         <title>hackaton sample</title>
         <!--head부분 css/bootstrap 스크립트 추가부분 따로 빼던가 안빼도 되고-->
          {% load staticfiles %}
-         <link rel="stylesheet" href="{% static 'css/main.css' %}?ver=1.8" >
+         <link rel="stylesheet" href="{% static 'css/main.css' %}?ver=2.0" >
          <script type="text/javascript" src="{% static "js/main.js" %}"></script>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -47,7 +47,11 @@
         <!--header-->
          <div class ="head">
         <ul class="pull-right">
-       <li><img src = "{% static 'cafe.png'%}" width="60px" height="60px" >오늘의 다방</li>
+       <li><a href = "{% url 'start'%}">
+       <img src = "{% static 'cafe.png'%}" width="60px" height="60px" >
+       </a>
+       오늘의 다방
+       </li>
                 
 
             {% if user.is_authenticated %}
